# api/docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /
 definitions:
+  routes.AgentParsed:
+    properties:
+      checked:
+        type: string
+      cmd_result:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      os:
+        type: string
+    type: object
   routes.TokenResponse:
     properties:
       token:
@@ -81,6 +94,28 @@ paths:
       summary: Delete table
       tags:
       - agent user
+  /api/v1/agent/list:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              $ref: '#/definitions/routes.AgentParsed'
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: list agents
   /api/v1/user/login:
     post:
       consumes:
